##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.5)
project(test-y C)

##############################################
#   Source
##############################################
add_subdirectory(c-core)
add_subdirectory(c-tls)
