##############################################
#   CMake
##############################################

##############################################
#   sub-projects
##############################################
add_subdirectory(startup)
add_subdirectory(dynrule)
add_subdirectory(pepon-teston)

