##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.0)

##############################################
#   sub-projects
##############################################
add_subdirectory(startup)
add_subdirectory(dynrule)
add_subdirectory(pepon-teston)

