##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 2.8)

##############################################
#   sub-projects
##############################################
add_subdirectory(pepon)
add_subdirectory(teston)

