##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.11)

##############################################
#   sub-projects
##############################################
add_subdirectory(pepon)
add_subdirectory(teston)
